--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
@@ -11,7 +12,6 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 repositories {
-    google()
     mavenCentral()
 }
 
@@ -60,4 +60,12 @@ compileJava.options.encoding = 'UTF-8'
 test {
     useJUnitPlatform()
     include '**/*Test.class'
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
