--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ logging.level.org.springframework.transaction.interceptor=INFO
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
